add login user and get product path in swagger docs
