# adapters/http_adapter.go
@@ -28,7 +28,7 @@ func NewHttpUserHandler(service core.UserService) *HttpUserHandler {
 }
 
 // Handler functions
-// getProductsHandler godoc
+// GetProducts godoc
 // @Summary Get all products
 // @Description Get details of all products
 // @Tags product
@@ -47,6 +47,17 @@ func (h *HttpProductHandler) GetProducts(c *fiber.Ctx) error {
 	return c.JSON(products)
 }
 
+// Handler functions
+// GetProduct godoc
+// @Summary Get product
+// @Description Get details of product
+// @Tags product
+// @Accept  json
+// @Produce  json
+// @Security ApiKeyAuth
+// @Success 200 {object} core.Product
+// @Param id path uint true "ID"
+// @Router /product/{id} [get]
 func (h *HttpProductHandler) GetProduct(c *fiber.Ctx) error {
 	productId, err := strconv.Atoi(c.Params("id"))
 
@@ -122,6 +133,16 @@ func (h *HttpUserHandler) CreateUser(c *fiber.Ctx) error {
 	return c.Status(fiber.StatusCreated).JSON(user)
 }
 
+// Handler functions
+// LoginUser godoc
+// @Summary Login user
+// @Description Login user
+// @Tags user
+// @Accept  json
+// @Produce  json
+// @Success 200 {object} core.LoginSuccess
+// @Param core.UserRequest body string true "Username/password"
+// @Router /user/login [post]
 func (h *HttpUserHandler) LoginUser(c *fiber.Ctx) error {
 	requestUser := new(core.User)
 
@@ -156,8 +177,5 @@ func (h *HttpUserHandler) LoginUser(c *fiber.Ctx) error {
 		HTTPOnly: true,
 	})
 
-	return c.JSON(fiber.Map{
-		"message": "Login success",
-		"token":   t,
-	})
+	return c.JSON(core.LoginSuccess{Message: "Login success", Token: t})
 }
